# SmallRandGenerator

./: CMakeLists.txt  LICENSE  README.md  arm-gcc-cortex-m0plus.cmake
include/: SmallRandGenerator.h
src/: SmallRandGenerator.c
test/: Makefile  main.c  testfile1.c  testfile1.h
